--- a/charts/px/templates/portworx-rbac-config.yaml
+++ b/charts/px/templates/portworx-rbac-config.yaml
@@ -21,6 +21,10 @@ rules:
 - apiGroups: [""]
   resources: ["persistentvolumeclaims"]
   verbs: ["get", "list"]
+- apiGroups: [""]
+  resources: ["configmaps"]
+  verbs: ["get", "list", "create", "update", "delete"]
+
 ---
 
 kind: ClusterRoleBinding
