--- a/charts/px/templates/portworx-stork.yaml
+++ b/charts/px/templates/portworx-stork.yaml
@@ -84,7 +84,7 @@ rules:
     verbs: ["get", "list", "watch", "create", "update", "patch", "delete"]
   - apiGroups: [""]
     resources: ["configmaps"]
-    verbs: ["get", "create", "update"]
+    verbs: ["get", "list", "create", "update"]
   - apiGroups: [""]
     resources: ["services"]
     verbs: ["get"]
@@ -146,7 +146,7 @@ spec:
         - --verbose
         - --leader-elect=true
         imagePullPolicy: Always
-        image: openstorage/stork:1.0.1
+        image: openstorage/stork:1.0.2
         resources:
           requests:
             cpu: '0.1'
