Fix for quoting the ebs volume types

--- a/charts/portworx/templates/portworx-ds.yaml
+++ b/charts/portworx/templates/portworx-ds.yaml
@@ -82,7 +82,7 @@ spec:
               {{ $driveNames := .drives | split ";" }}
               {{- range $index, $name := $driveNames }}
               "-s", 
-              {{ $name }},
+              {{ quote $name }},
               {{- end -}}
               {{- end -}}
 
