--- a/charts/portworx/values.yaml
+++ b/charts/portworx/values.yaml
@@ -3,7 +3,7 @@
   deploymentType: oci                     # accepts "oci" or "docker"
   imageType: none                         # 
   imageVersion: 1.4.2                   # Version of the PX Image. 
-
+  kvdb:
   openshiftInstall: false                 # Defaults to false for installing Portworx on Openshift .
   isTargetOSCoreOS: false                 # Is your target OS CoreOS? Defaults to false.
   pksInstall: false                       # installation on PKS (Pivotal Container Service)
